--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strapi-import-export",
+  "name": "@v3-distribution/strapi-import-export",
   "version": "1.0.0",
   "description": "This is a plugin for import and export content of collection types.",
   "license": "MIT",
@@ -27,7 +27,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https:/https://github.com/slee-vista/strapi-plugin-import-export-content.git"
+    "url": "git+https://github.com/slee-vista/strapi-plugin-import-export-content.git"
   },
   "keywords": [
     "strapi",
@@ -41,5 +41,6 @@
   "bugs": {
     "url": "https://github.com/slee-vista/strapi-plugin-import-export-content/issues"
   },
-  "homepage": "https://github.com/slee-vista/strapi-plugin-import-export-content#readme"
+  "homepage": "https://github.com/slee-vista/strapi-plugin-import-export-content#readme",
+  "main": "index.js"
 }
