--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strapi-plugin-import-export-no-limit",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "This is a plugin for import and export content of collection types.",
   "license": "MIT",
   "strapi": {
@@ -14,6 +14,7 @@
   "dependencies": {
     "csv-parse": "^4.15.3",
     "csv-string": "^4.0.1",
+    "dotenv": "^10.0.0",
     "prismjs": "^1.23.0",
     "react-simple-code-editor": "^0.11.0"
   },
